[package]
name = "prusto"
version = "0.1.0"
authors = ["nooberfsh <nooberfsh@gmail.com>"]
edition = "2018"
description = "A presto client library"
license = "MIT"
repository = "https://github.com/nooberfsh/prusto"
homepage = "https://github.com/nooberfsh/prusto"
documentation = "https://docs.rs/prusto"
keywords = ["presto", "prestosql"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "macros"]

[dependencies]
macros = { version = "0.1", path = "./macros"}
reqwest = { version = "0.10", features = ["json"]}
futures = "0.3"
http = "0.2"
tokio = { version = "0.2", features = ["full"]}
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
derive_more = "0.99"
bigdecimal = "0.1"
thiserror = "1.0"
async-stream  = "0.2"
chrono = "0.4"
iterable = "0.4.0"

[dev-dependencies]
trybuild = "1.0"
maplit = "1.0"
dotenv = "0.15"
