[package]
name = "prusto"
version = "0.2.0"
authors = ["nooberfsh <nooberfsh@gmail.com>"]
edition = "2018"
description = "A presto client library"
license = "MIT"
repository = "https://github.com/nooberfsh/prusto"
homepage = "https://github.com/nooberfsh/prusto"
documentation = "https://docs.rs/prusto"
keywords = ["presto", "prestosql"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "prusto-macros"]

[dependencies]
# self dependencies
macros = { version = "0.1", path = "prusto-macros", package = "prusto-macros"}
# third party dependencies
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
derive_more = "0.99"
bigdecimal = "0.1"
thiserror = "1.0"
chrono = "0.4"
chrono-tz = "0.5.3"
iterable = "0.4.0"
# network dependencies
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"]}
futures = "0.3"
futures-async-stream = "0.2"
http = "0.2"
tokio = { version = "1.0", features = ["full"]}
urlencoding = "1.3.3"

[dev-dependencies]
trybuild = "1.0"
maplit = "1.0"
dotenv = "0.15"
