[package]
name = "prusto"
version = "0.5.2"
authors = ["nooberfsh <nooberfsh@gmail.com>"]
edition = "2021"
description = "A presto/trino client library"
license = "MIT"
repository = "https://github.com/nooberfsh/prusto"
homepage = "https://github.com/nooberfsh/prusto"
documentation = "https://docs.rs/prusto"
keywords = ["presto", "prestosql", "trino"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "prusto-macros"]

[features]
default = []
presto = []

[dependencies]
# self dependencies
prusto-macros = { version = "0.2", path = "prusto-macros"}
# third party dependencies
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
derive_more = "0.99"
bigdecimal = "0.3"
thiserror = "1.0"
chrono = "0.4"
chrono-tz = "0.8"
iterable = "0.6"
log = "0.4"
lazy_static = "1.4"
regex = "1.5"
# network dependencies
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"]}
futures = "0.3"
http = "0.2"
tokio = { version = "1.16", features = ["full"]}
urlencoding = "2.1"
uuid = { version = "1.2", features = ["serde", "v4"] }
paste = "1.0.14"

[dev-dependencies]
trybuild = "1.0"
maplit = "1.0"
dotenv = "0.15"
