[package]
name = "prusto-macros"
version = "0.1.0"
authors = ["nooberfsh <nooberfsh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = {version = "1.0", features = ["default", "extra-traits", "full"]}
quote = "1.0"
proc-macro2 = "1.0"
