[package]
name = "prusto-macros"
version = "0.2.1"
authors = ["nooberfsh <nooberfsh@gmail.com>"]
edition = "2021"
description = "prusto macros"
license = "MIT"
repository = "https://github.com/nooberfsh/prusto"
homepage = "https://github.com/nooberfsh/prusto"
documentation = "https://docs.rs/prusto"
keywords = ["presto", "prestosql"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = {version = "1.0", features = ["default", "extra-traits", "full"]}
quote = "1.0"
proc-macro2 = "1.0"
