[package]
name = "prusto-model"
version = "0.1.0"
authors = ["nooberfsh <nooberfsh@gmail.com>"]
edition = "2021"
description = "Data model describing trino response"
repository = "https://github.com/nooberfsh/prusto"
homepage = "https://github.com/nooberfsh/prusto"
documentation = "https://docs.rs/prusto-model"
keywords = ["presto", "prestosql", "trino", "model"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"]}
derive_more = "0.99"
iterable = "0.6"
serde_json = "1.0"
chrono = "0.4"
bigdecimal = "0.3"
uuid = { version = "1.2", features = ["serde", "v4"] }

